--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,41 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+/** Filter Section **/
+
+.filter-section {
+	display: flex;
+	margin: 20px 0;
+	gap: 20px;
+	justify-content: center;
+}
+.filter-section button {
+	min-width: 90px;
+	padding: 15px;
+
+	border-radius: 60px;
+	border: 1px solid #1D6154;
+	background-color: white;
+
+
+	font-size: 1em;
+	font-family: Syne;
+	color: #1D6154;
+	transition: 0.1s ease-in;
+}
+
+.filter-section button:hover {
+	background-color: #1D6154;
+	border: 1px solid #1D6154;
+	color: white;
+}
+
+.filter-section button.active {
+	background-color: #1D6154;
+	border: 1px solid #1D6154;
+	color: white;
+}
 .gallery {
 	width: 100%;
 	display: grid;
