--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -52,6 +52,7 @@ body {
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background-color: #FFFEF8;
 }
 header {
 	display: flex;
@@ -93,6 +94,18 @@ nav ul {
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+}
+
+nav a {
+	text-decoration: none;
+}
+
+nav a.active {
+	font-weight: 700;
+}
+
+a:visited {
+	color: inherit;
 }
 
 li:hover {
@@ -140,7 +153,7 @@ li:hover {
 
 	border-radius: 60px;
 	border: 1px solid #1D6154;
-	background-color: white;
+	background-color: #FFFEF8;
 
 
 	font-size: 1em;
@@ -152,7 +165,7 @@ li:hover {
 .filter-section button:hover {
 	background-color: #1D6154;
 	border: 1px solid #1D6154;
-	color: white;
+	color: #FFFEF8;
 }
 
 .filter-section button.active {
@@ -160,6 +173,7 @@ li:hover {
 	border: 1px solid #1D6154;
 	color: white;
 }
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -172,9 +186,10 @@ li:hover {
 	width: 100%;
 
 }
+
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
@@ -191,7 +206,7 @@ margin: auto;
 }
 
 #contact input {
-	height: 50px;
+	height: 40px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
@@ -205,6 +220,8 @@ margin: auto;
 }
 
 input[type="submit"]{
+	height: 40px;
+	padding: 10px;
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -213,6 +230,10 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+}
+
+input[type="submit"]:hover {
+	background-color: black;
 }
 
 footer nav ul {
