--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,7 +136,8 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 0;
+	margin-right: 1em;
 }
 
 /** Filter Section **/
@@ -297,4 +298,102 @@ input[type="submit"]{
 	text-align: center;
 	text-indent: 0;
 	border-radius: 60px ;
+}
+
+/** Top Bar Container **/
+
+.topbar-container {
+	height: 50px;
+	/*Makes the bar display not from the start of body but the whole viewport*/
+	width: 100vw;
+	margin: 0 auto;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	/* Standard stuff */
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.topbar-container a {
+	color:#FFFEF8;
+}
+
+/* Portfolio title container */
+.title-div {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+.title-div h2 {
+	margin-bottom: 0;
+}
+
+/** MODAL **/
+
+.modal {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+
+	background-color: rgba(0, 0, 0, 0.3);
+
+	box-sizing: border-box;
+}
+.modal-wrapper {
+	height: 600px;
+	width: 600px;
+	max-height: 60%;
+	max-width: 60%;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	background-color: #FFFEF8;
+	border-radius: 10px;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+.modal-buttons {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	justify-self: flex-start;
+}
+
+.modal-buttons button {
+	height: 25px;
+	width: 25px;
+	padding: 0;
+	border: none;
+	background-color: inherit;
+	color: inherit;
+	font-size: 1em;
+	transition: ease;
+}
+
+.modal-buttons button:hover {
+	color: #B1663C;
+}
+
+.modal-buttons #back-button {
+	font-size: large;
+}
+
+.modal-gallery {
+	max-width: calc(100% - 30px);
+	max-height: calc(100% - 30px);
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
