Finished implementing upload and deletion Still have to work on the CSS for upload form and do some refactoring and better error handling
Handled disable button

Still some small errors regarding the workspace duplicating itself for no reason

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -471,3 +471,18 @@ input[type="submit"]{
 	font-size: 10px;
   }
 
+/*** UPLOAD FORM ***/
+
+#upload-form label {
+	display: block;
+}
+
+#preview-image {
+	width: 40%;
+}
+
+#submit-button.disabled{
+	background-color: #A7A7A7;
+	border: #A7A7A7;
+	cursor: not-allowed;
+}
