--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -185,7 +185,6 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
 
 #contact {
@@ -300,7 +299,7 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
-/** Top Bar Container **/
+/*** Top Bar Container ***/
 
 .topbar-container {
 	height: 50px;
@@ -334,28 +333,31 @@ input[type="submit"]{
 	margin-bottom: 0;
 }
 
-/** MODAL **/
+/*** MODAL ***/
 
 .modal {
+	display: none;
 	position: fixed;
-	display: flex;
 	align-items: center;
 	justify-content: center;
 	top: 0;
 	left: 0;
 	height: 100%;
 	width: 100%;
-
-	background-color: rgba(0, 0, 0, 0.3);
-
 	box-sizing: border-box;
+	opacity: 0;
+	transition: background-color 1s;
+}
+
+.modal[open] {
+	display: flex;
+	opacity: 1;
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-wrapper {
 	height: 690px;
 	width: 630px;
-	/* max-height: 60%;
-	max-width: 60%; */
 	padding: 20px;
 	box-sizing: border-box;
 	display: flex;
@@ -371,19 +373,21 @@ input[type="submit"]{
 	display: flex;
 	position: relative;
 	width: 100%;
+	height: 25px;
 	justify-content: space-between;
-	justify-self: flex-start;
 }
 
 .modal-buttons button {
 	height: 25px;
 	width: 25px;
 	padding: 0;
+	display: flex;
+	align-items: center;
 	border: none;
 	background-color: inherit;
 	color: inherit;
 	font-size: 1em;
-	transition: ease;
+	transition: ease 0.3s;
 }
 
 .modal-buttons button:hover {
@@ -400,6 +404,7 @@ input[type="submit"]{
 }
 
 .modal-container {
+	width: 420px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -420,8 +425,9 @@ input[type="submit"]{
 }
 
 .modal-container .action-button {
-	margin-top: 30px;
-	padding: 10px;
+	width: 60%;
+	margin-top: 25px;
+	padding: 10px 20px;
 	color: #FFFEF8;
 	background-color: #1D6154;
 	border: 1px solid #1D6154;
@@ -436,13 +442,12 @@ input[type="submit"]{
 
 .modal-gallery {
 	max-width: 100%;
-	max-height: 400px;
-	margin: 40px 0px;
+	max-height: 500px;
+	margin: 40px 0px 80px 0px;
 	gap: 20px 10px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	overflow: auto;
-	
 }
 
 .img-container {
@@ -456,6 +461,7 @@ input[type="submit"]{
 	display: block;
 	width: 100%;
 	height: 100%;
+	object-fit: cover;
 }
 
 .delete-button {
@@ -473,12 +479,109 @@ input[type="submit"]{
 
 /*** UPLOAD FORM ***/
 
+.modal{
+	font-family: "Work Sans";
+}
+
+.modal-form {
+	width: 100%;
+	max-width: 100%;
+	height: 100%;
+	max-height: 400px;
+	margin: 40px 0px;
+  	justify-content: center;
+	box-sizing: border-box;
+}
+
+.form-group input,select {
+	width: 100%;
+	height: 50px;
+	padding: 0;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	background-color: #ffffff;
+	font-size: 14px;
+	font-weight: 400;
+	color: #444444;
+}
+
+.form-group input {
+	text-indent: 20px;
+}
+
+.form-group select {
+	text-indent: 10px;
+	appearance: none;
+}
+
+.file-preview-container {
+	display: flex;
+  	justify-content: center;
+}
+
+#category-group {
+	position: relative;
+}
+
+#category-group i {
+	position: absolute;
+  	bottom: 18px;
+  	left: 370px;
+  	color: #444444;
+	font-size: 12px;
+}
+
+#upload-group {
+	height: 170px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	border: none;
+	border-radius: 3px;
+	background-color: #E8F1F6;
+}
+
+#fake-button {
+	padding: 10px 30px;
+	height: 36px;
+	background-color: #CBD6DC;
+	color: #306685;
+	border: none;
+	border-radius: 50px;
+	font-weight: 500;
+	font-size: 14px;
+}
+
+#upload-form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 30px;
+}
+
 #upload-form label {
 	display: block;
+	margin-bottom: 10px;
+	font-size: 14px;
+	font-weight: 500;
+	color: #3D3D3D;
+}
+
+#preview-icon {
+	width: 76px;
+	height: 76px;
+	font-size: 82px;
+	color: #B9C5CC;
 }
 
 #preview-image {
-	width: 40%;
+	justify-self: center;
+	align-self: center;
+	object-fit: cover;
+	width: 100%;
+	height: 170px;
 }
 
 #submit-button.disabled{
