--- a/FrontEnd/assets/style-modal.css
+++ b/FrontEnd/assets/style-modal.css
@@ -153,9 +153,10 @@
 }
 
 .modal-gallery {
+	height: 380px;
 	max-width: 100%;
-	max-height: 500px;
-	margin: 40px 0px 80px 0px;
+	max-height: 380px;
+	margin: 40px 0px;
 	gap: 20px 10px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
