--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,7 +125,11 @@ li:hover {
 }
 
 #introduction article {
-	flex: 1
+	flex: 1;
+	display: flex;
+  	flex-direction: column;
+  	gap: 10px;
+  	line-height: 1.15em;
 }
 #introduction h2 {
 	margin-bottom: 1em;
